--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -47,6 +47,19 @@ body {
     white-space: -moz-pre-wrap; /* Mozilla */
     white-space: -hp-pre-wrap;  /* HP Printers */
 }
+
+/*
+https://css-tricks.com/snippets/css/make-pre-text-wrap/
+Browser specific (not valid) styles to make preformatted text wrap         
+*/
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 /*
 -------------------------------------------------- */
 
