--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -91,7 +91,6 @@ dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
  * Handling Long Words and URLs (Forcing Breaks, Hyphenation, Ellipsis, etc)
  * https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
  */
-
 .dont-break-out {
     /* These are technically the same, but use both */
     overflow-wrap: break-word;
@@ -132,4 +131,16 @@ dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
+}
+
+/**
+ * Make “Pre” Text Wrap
+ * https://css-tricks.com/snippets/css/make-pre-text-wrap/
+ */
+.pre-wrap {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
